--- a/PocketJW/app/build.gradle
+++ b/PocketJW/app/build.gradle
@@ -17,9 +17,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/LICENSE.txt'
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile files('src/main/libs/android-async-http-1.4.6.jar')
+    compile files('src/main/libs/avoscloud-push-v3.1.5.jar')
+    compile files('src/main/libs/avoscloud-sdk-v3.1.5.jar')
+    compile files('src/main/libs/avoscloud-statistics-v3.1.5.jar')
+    compile files('src/main/libs/fastjson.jar')
+    compile files('src/main/libs/httpmime-4.2.4.jar')
+    compile files('src/main/libs/Java-WebSocket-1.2.0-leancloud.jar')
+    compile files('src/main/libs/qq.sdk.1.6.1.jar')
+    compile files('src/main/libs/weibo.sdk.android.sso.3.0.1-leancloud.jar')
 }
