--- a/PocketJW/app/build.gradle
+++ b/PocketJW/app/build.gradle
@@ -22,18 +22,24 @@ android {
         exclude 'META-INF/NOTICE.txt'
         exclude 'META-INF/LICENSE.txt'
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile files('src/main/libs/android-async-http-1.4.6.jar')
-    compile files('src/main/libs/avoscloud-push-v3.1.5.jar')
-    compile files('src/main/libs/avoscloud-sdk-v3.1.5.jar')
-    compile files('src/main/libs/avoscloud-statistics-v3.1.5.jar')
-    compile files('src/main/libs/fastjson.jar')
-    compile files('src/main/libs/httpmime-4.2.4.jar')
-    compile files('src/main/libs/Java-WebSocket-1.2.0-leancloud.jar')
-    compile files('src/main/libs/qq.sdk.1.6.1.jar')
-    compile files('src/main/libs/weibo.sdk.android.sso.3.0.1-leancloud.jar')
+    compile files('libs/android-async-http-1.4.6.jar')
+    compile files('libs/avoscloud-feedback-v3.3.2.jar')
+    compile files('libs/avoscloud-push-v3.3.2.jar')
+    compile files('libs/avoscloud-sdk-v3.3.2.jar')
+    compile files('libs/avoscloud-search-v3.3.2.jar')
+    compile files('libs/avoscloud-sns-v3.3.2.jar')
+    compile files('libs/avoscloud-statistics-v3.3.2.jar')
+    compile files('libs/fastjson.jar')
+    compile files('libs/httpmime-4.2.4.jar')
+    compile files('libs/Java-WebSocket-1.2.0-leancloud.jar')
+    compile files('libs/qq.sdk.1.6.1.jar')
+    compile files('libs/weibo.sdk.android.sso.3.0.1-leancloud.jar')
 }
