--- a/PocketJW/app/src/main/AndroidManifest.xml
+++ b/PocketJW/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:name=".IIIApplication">
         <activity
             android:name=".Activity.MainActivity"
             android:label="@string/app_name" >
