--- a/PocketJW/app/src/main/AndroidManifest.xml
+++ b/PocketJW/app/src/main/AndroidManifest.xml
@@ -9,18 +9,14 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
+        android:name=".IIIApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-        android:name=".IIIApplication">
-        <activity
-            android:name=".Activity.MainActivity"
-            android:label="@string/app_name" >
-        </activity>
+        android:theme="@android:style/Theme.Holo.Light.NoActionBar.TranslucentDecor" >
         <activity
             android:name=".Activity.WelcomeActivity"
-            android:label="@string/title_activity_welcome">
+            android:label="@string/title_activity_welcome" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,11 +25,19 @@
         </activity>
         <activity
             android:name=".Activity.GuideActivity"
-            android:label="@string/title_activity_guide">
+            android:label="@string/title_activity_guide" >
         </activity>
         <activity
             android:name=".Activity.LoginActivity"
             android:label="@string/title_activity_login" >
+        </activity>
+        <activity
+            android:name=".Activity.MainActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".Activity.NewsActivity"
+            android:label="@string/title_activity_news" >
         </activity>
     </application>
 
