--- a/PocketJW/app/src/main/AndroidManifest.xml
+++ b/PocketJW/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.Light.NoActionBar.TranslucentDecor" >
+        android:theme="@style/iiiActionStyle" >
         <activity
             android:name=".Activity.WelcomeActivity"
             android:label="@string/title_activity_welcome" >
